# snowboot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  README.rd  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
benches/: streaming_benchmark.rs
doc/: Vorbis_I_spec.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
src/: api.rs  config.rs  connection.rs  errors.rs  icecast.rs  lib.rs  main.rs  metrics.rs  player.rs  queue.rs  server.rs  silence.rs  streamer.rs  util.rs  validation.rs
src/util/: config.rs  logging.rs  mod.rs  signals.rs  silence.rs
src/validation/: mod.rs  validators.rs
systemd/: install.sh  snowboot.service  uninstall.sh
tests/: api_tests.rs
tests/integration/: config_test.rs  connection_test.rs  mod.rs  validation_test.rs
