[package]
name = "snowboot"
version = "0.1.0"
edition = "2021"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
license = "ISC"
description = "equipment to help brave icy streams"
keywords = ["remuxing", "ogg"]
repository = "https://github.com/dspearson/snowboot"
readme = "README.rd"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.10.1"
ogg = { version = "0.9.2", features = ["async", "tokio"] }
ctrlc = "3.4.6"
anyhow = "1.0.97"
futures = "0.3.31"
oggmux = "0.1.0"
# New dependencies for production readiness
httparse = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prometheus = { version = "0.13", features = ["process"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
rustls = "0.23"
tokio-rustls = "0.26"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.0"

[[bench]]
name = "streaming_benchmark"
harness = false
