[package]
name = "snowboot"
version = "0.1.0"
edition = "2021"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
license = "ISC"
description = "equipment to help brave icy streams"
keywords = ["remuxing", "ogg"]
repository = "https://github.com/dspearson/snowboot"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7"
serde_json = "1.0"
bytes = "1.11"
ogg = { version = "0.9.2", features = ["async", "tokio"] }
anyhow = "1.0"
futures = "0.3"
oggmux = { git = "https://github.com/dspearson/oggmux" }
httparse = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prometheus = { version = "0.14", features = ["process"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
rustls = "0.23"
tokio-rustls = "0.26"
thiserror = "2.0"
lazy_static = "1.5"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.27"

[[bench]]
name = "streaming_benchmark"
harness = false
